[project]
name = "libimportx"
version = "1.0.2"
authors = [
  { name="Tanjim Kamal", email="tanjimkamal1@gmail.com" },
]
description = "Import from other languages"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/itzmetanjim/libimportx-python"
Issues = "https://github.com/itzmetanjim/libimportx-python/issues"
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
